@@ -1,4 +1,4 @@
-/* $Id: oprofile.c,v 1.78 2001/09/02 00:38:04 movement Exp $ */
+/* $Id: oprofile.c,v 1.79 2001/09/02 14:34:44 movement Exp $ */
 /* COPYRIGHT (C) 2000 THE VICTORIA UNIVERSITY OF MANCHESTER and John Levon
  * This program is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License as published by the Free
@@ -23,6 +23,12 @@ static char *op_version = VERSION_STRING;
 MODULE_AUTHOR("John Levon (moz@compsoc.man.ac.uk)");
 MODULE_DESCRIPTION("Continuous Profiling Module");
 
+#ifdef CONFIG_SMP
+MODULE_PARM(allow_unload, "i");
+MODULE_PARM_DESC(allow_unload, "Allow module to be unloaded on SMP");
+static int allow_unload;
+#endif
+ 
 /* sysctl settables */
 static int op_hash_size=OP_DEFAULT_HASH_SIZE;
 static int op_buf_size=OP_DEFAULT_BUF_SIZE;
@@ -1211,6 +1217,12 @@ static int can_unload(void)
 	int can = -EBUSY;
 	down(&sysctlsem);
 
+/* the module unload race can currently only happen on SMP */
+#ifdef CONFIG_SMP
+	if (!allow_unload)
+		return -EBUSY;
+#endif
+ 
 	if (!prof_on && !GET_USE_COUNT(THIS_MODULE))
 		can = 0;
 	up(&sysctlsem);
